@@ -1,5 +1,11 @@
 2003-07-16  Royce Mitchell III <royce3@ev1.net>
 
+	* fixed warnings at lib/msvcrt/stdio/fputs.c:79
+	and lib/msvcrt/stdlib/errno.c:14
+	and lib/msvcrt/stdlib/wputenv.c:24
+
+2003-07-16  Royce Mitchell III <royce3@ev1.net>
+
 	* integrated Art Yerkes' _ftime implementation at
 	lib/msvcrt/time/ftime.c
 	* fixed ungetc warning in lib/msvcrt/stdio/vfscanf.c (also
